# simd-playground

./: CMakeLists.txt  benchs.txt
src/: benchmark.cpp  functions.cpp  functions.h  test.cpp  test_inputs.h
